# jug-montreal-otel

./: .gitignore  README.md
docker/otel-collector/: config.yaml  docker-compose.yaml
java-main/: README.md  build.gradle
java-main/src/main/java/com/jug/: App.java
java-worker/: README.md  build.gradle  chatgpt.history  test.http
java-worker/src/main/java/com/jug/worker/: MicrometerBinderConfiguration.java  Person.java  PersonRepository.java  ScheduledTasks.java  WorkerApplication.java  WorkerController.java
java-worker/src/main/resources/: application.properties
java-worker/src/test/java/com/jug/worker/: WorkerApplicationTests.java
otelagent-extensions/: README.md  build.gradle  settings.gradle
otelagent-extensions/src/main/java/com/example/javaagent/: DemoAutoConfigurationCustomizerProvider.java  DemoConfigurableSamplerProvider.java  DemoSampler.java
rust-hello/: Cargo.toml  README.md
rust-hello/src/: main.rs
slides/: README.md  otel.md
