[package]
name = "jug-rust-hello"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
opentelemetry-otlp = "0.11.0"
actix-web = "4.1"
actix-web-opentelemetry = "0.13"
env_logger = "0.10.0"
actix-service = "2.0.2"
opentelemetry-semantic-conventions = "0.10.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-bunyan-formatter = "0.3.6"
